plugins {
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'java'
	id 'application'
	id 'org.openjfx.javafxplugin' version '0.1.0'
	id 'org.beryx.jlink' version '3.0.1'
}

javafx {
	version = "21.0.1"
	modules = [ 'javafx.controls', 'javafx.fxml' ]
}

group = 'nl.sander'
version = '0.0.2-SNAPSHOT'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
	modularity.inferModulePath = true
}

jlink {
	launcher {
		name = 'hellofx'
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'com.opencsv:opencsv:5.9'
	// JavaFX dependencies (if needed)
	implementation 'org.openjfx:javafx-controls'
	implementation 'org.openjfx:javafx-graphics'
	implementation 'org.openjfx:javafx-fxml'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework:spring-test'
	testImplementation("org.assertj:assertj-core")
}

test {
	useJUnitPlatform()
}

